; ModuleID = '/home/carl/AnghaBench/8cc/extr_gen.c_emit_regsave_area.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_gen.c_emit_regsave_area.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"sub $%d, #rsp\00", align 1
@REGAREA_SIZE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"mov #rdi, (#rsp)\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"mov #rsi, 8(#rsp)\00", align 1
@.str.3 = private unnamed_addr constant [19 x i8] c"mov #rdx, 16(#rsp)\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c"mov #rcx, 24(#rsp)\00", align 1
@.str.5 = private unnamed_addr constant [18 x i8] c"mov #r8, 32(#rsp)\00", align 1
@.str.6 = private unnamed_addr constant [18 x i8] c"mov #r9, 40(#rsp)\00", align 1
@.str.7 = private unnamed_addr constant [23 x i8] c"movaps #xmm0, 48(#rsp)\00", align 1
@.str.8 = private unnamed_addr constant [23 x i8] c"movaps #xmm1, 64(#rsp)\00", align 1
@.str.9 = private unnamed_addr constant [23 x i8] c"movaps #xmm2, 80(#rsp)\00", align 1
@.str.10 = private unnamed_addr constant [23 x i8] c"movaps #xmm3, 96(#rsp)\00", align 1
@.str.11 = private unnamed_addr constant [24 x i8] c"movaps #xmm4, 112(#rsp)\00", align 1
@.str.12 = private unnamed_addr constant [24 x i8] c"movaps #xmm5, 128(#rsp)\00", align 1
@.str.13 = private unnamed_addr constant [24 x i8] c"movaps #xmm6, 144(#rsp)\00", align 1
@.str.14 = private unnamed_addr constant [24 x i8] c"movaps #xmm7, 160(#rsp)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @emit_regsave_area to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @emit_regsave_area() #0 {
  %1 = load i32, i32* @REGAREA_SIZE, align 4
  %2 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %1)
  %3 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %4 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  %5 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.3, i64 0, i64 0))
  %6 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0))
  %7 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.5, i64 0, i64 0))
  %8 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.6, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.7, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.8, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.9, i64 0, i64 0))
  %12 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.10, i64 0, i64 0))
  %13 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.11, i64 0, i64 0))
  %14 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.12, i64 0, i64 0))
  %15 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.13, i64 0, i64 0))
  %16 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.14, i64 0, i64 0))
  %17 = load i32, i32* @REGAREA_SIZE, align 4
  ret i32 %17
}

declare dso_local i32 @emit(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
